# Sever-Client-Network

Client-master/: CMakeLists.txt  SPL3new  makefile
Client-master/include/: Task.h  bidiProtocol.h  connectionHandler.h  encoderDecoder.h
Client-master/src/: Task.cpp  bidiClient.cpp  bidiProtocol.cpp  connectionHandler.cpp  encoderDecoder.cpp
Server-master/src/: ActorThreadPool.java  BaseServer.java  BidiMessagingProtocol.java  BidiMessagingProtocolImpl.java  ConnectionHandler.java  ConnectionHandlerImpl.java  Connections.java  ConnectionsImpl.java  MessageEncoderDecoder.java  MessageEncoderDecoderImpl.java  NonBlockingConnectionHandler.java  Reactor.java  ReactorMain.java  ReactorServerImpl.java  Server.java  TPCServer.java  TpcServerMain.java  User.java  main.java
